@@ -69,6 +69,8 @@ us a note on ns-developers mailing list.</p>
       an Autoconfigured address.</li>
   <li>Mac64Address support has been extended. It can now be used with 
       IPv6 to make an Autoconfigured address.</li>
+  <li>IPv6 can now detect and use Path-MTU. See 
+      examples/ipv6/fragmentation-ipv6-two-MTU.cc for an example.</li>
 </ul>
 
 <h2>Changes to existing API:</h2>
